cloud/ingress/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: ingress-argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/ssl-services: "devops-argocd-server"
spec:
  tls:
    - hosts:
      - "argocd.cloud.com"
  rules:
  - host: argocd.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: devops-argocd-server
               port:
                 number: 443
