cloud/ingress/ingress-ceph.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph
  namespace: ingress-nginx
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8484
---
apiVersion: v1
kind: Endpoints
metadata:
  name: ceph
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.60.34
    ports:
      - port: 8484
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ceph
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - "ceph.cloud.com"
  rules:
  - host: ceph.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: ceph
               port:
                 number: 443
