cloud/ingress/ingress-haproxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: haproxy
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 10000
---
apiVersion: v1
kind: Endpoints
metadata:
  name: haproxy
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.60.44
      - ip: 192.168.60.46
      - ip: 192.168.60.47
    ports:
      - port: 10000
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-haproxy
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /stats
spec:
  rules:
  - host: haproxy.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: haproxy
               port:
                 number: 80
