cloud/ingress/ingress-harbor.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor
  namespace: ingress-nginx
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: harbor
  namespace: ingress-nginx
subsets:
  - addresses:
      - ip: 192.168.60.34
    ports:
      - port: 8080
        protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-harbor
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: harbor.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: harbor
               port:
                 number: 80
