cloud/ingress/ingress-kiali.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: istio-system
  name: ingress-kiali
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /kiali/
spec:
  rules:
  - host: kiali.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: kiali
               port:
                 number: 20001
        - path: /kiali/
          pathType: Prefix
          backend:
            service:
               name: kiali
               port:
                 number: 20001
