cloud/ingress/ingress-minio.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubesphere-system
  name: ingress-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minio.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: minio
               port:
                 number: 9000
