cloud/ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubesphere-monitoring-system
  name: ingress-prometheus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: prometheus.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: prometheus-k8s
               port:
                 number: 9090
