cloud/ingress/ingress-weave.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: weave
  name: ingress-weave
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: weave.cloud.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
               name: weave-scope-app
               port:
                 number: 80
